benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/debug/bignum_ModExp_Add_iter6_error.log
=== Verification Error - Iteration 6 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_ModExp_Add.rs
Time: 2025-09-15 19:09:48

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0762]: unterminated character literal
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_impl.rs:161:68
    |
161 |             let new_bit = if (diff + 2) % 2 == 1 { '1' } else { '0'');
    |                                                                    ^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0762`.

--------------------------------------------------------------------------------

Additional Output:
error[E0762]: unterminated character literal
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_impl.rs:161:68
    |
161 |             let new_bit = if (diff + 2) % 2 == 1 { '1' } else { '0'');
    |                                                                    ^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0762`.
